--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			
 
 			
-			var tabla = "<h2>Tabla de concentración alcohólica por horas en sangre</h2><table border='1'><tr><th>Hora</th><th>[gr/L sangre]</th></tr>";
+			var tabla = "<h2>Tabla de concentración alcohólica en sangre según horas desde el momento de ingestión</h2><table border='1'><tr><th>Hora</th><th>[gr/L sangre]</th></tr>";
 			var concentracionInicial=(CantBebida*graduacion/100*0.8)/( peso*CoefSex);
 			var resultado =1000;
 			for(var i = 0; i <= 10 && resultado!=0; i++) {
