--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
 <head>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+
 	<title>Ecuación de Widmark</title>
 		<style>
 			tabla,
