--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
 <head>
+
+<meta name="viewport" content="width=device-width, initial-scale=2">
+
+
 	<title>Ecuación de Widmark</title>
 		<style>
 			tabla,
@@ -47,10 +51,10 @@
 			
 
 			
-			var tabla = "<h2>Tabla de concentración alcohólica por horas en sangre</h2><table border='1'><tr><th>Hora</th><th>[gr/L sangre]</th></tr>";
+			var tabla = "<h2>Tabla de concentración alcohólica en sangre según horas desde el momento de ingestión</h2><table border='1'><tr><th>Hora</th><th>[gr/L sangre]</th></tr>";
 			var concentracionInicial=(CantBebida*graduacion/100*0.8)/( peso*CoefSex);
 			var resultado =1000;
-			for(var i = 0; i <= 10 && resultado!=0; i++) {
+			for(var i = 0; i <= 24 && resultado!=0; i++) {
 				resultado = concentracionInicial - i*0.15;
 				if (resultado<0) { resultado=0 };
 				tabla += "<tr><td>" + i + "</td><td>" + resultado.toFixed(2) + "</td></tr>";
