--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			var CantBebida = parseInt(document.getElementById('CantBebida').value);
 			var graduacion = parseFloat(document.getElementById('graduacion').value);
 			
-			if (peso*CoefSex*CantBebida*graduacion>0) {
+			if (TRUE) {
 				var tabla = "<h2>Tabla de concentración alcohólica en sangre según horas desde el momento de ingestión</h2><table border='1'><tr><th>Hora</th><th>[gr/L sangre]</th></tr>";
 				var concentracionInicial=(CantBebida*graduacion/100*0.8)/( peso*CoefSex);
 				var resultado =1000;
