Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=2">
 
 
-	<title>Ecuación de Widmark</title>
+	<title>Concentración de Alcohol en sangre<br> Según ecuación de Widmark</title>
 		<style>
 			tabla,
 			tabla td {
