Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 		} else {
 		  //  block of code to be executed if the condition is false
-			document.getElementById('AquiLaTabla').innerHTML = "Has bebido mucho y no completaste los datos";
+			document.getElementById('AquiLaTabla').innerHTML = "<p>Has bebido mucho y no completaste los datos</p>";
 		}
 			
 	</script>
