--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@
 				}
 				tabla += "</table>";
 				document.getElementById('AquiLaTabla').innerHTML = tabla;
-			};
+			}
 
-		} else {
+			 else {
 		  //  block of code to be executed if the condition is false
 			document.getElementById('AquiLaTabla').innerHTML = "<p>Has bebido mucho y no completaste los datos</p>";
+			}
 		}
 			
 	</script>
