--- a/index.html
+++ b/index.html
@@ -65,11 +65,12 @@
 				}
 				tabla += "</table>";
 				document.getElementById('AquiLaTabla').innerHTML = tabla;
-			};
+			}
 
-		} else {
-		  //  block of code to be executed if the condition is false
+			else {
+		  	//  block of code to be executed if the condition is false
 			document.getElementById('AquiLaTabla').innerHTML = "<p>Has bebido mucho y no completaste los datos</p>";
+			}
 		}
 			
 	</script>
